feat: add color picker

--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="NonogramsApplicationWindow" parent="AdwApplicationWindow">
+    <property name="title">Nonograms</property>
     <property name="default-width">600</property>
     <property name="default-height">600</property>
+    <style>
+      <class name="devel" />
+    </style>
     <property name="content">
       <object class="GtkBox">
         <property name="orientation">vertical</property>
@@ -13,6 +17,10 @@
           <object class="NonogramsView" id="view">
             <property name="hexpand">1</property>
             <property name="vexpand">1</property>
+            <property name="margin-top">5</property>
+            <property name="margin-bottom">5</property>
+            <property name="margin-start">5</property>
+            <property name="margin-end">5</property>
           </object>
         </child>
       </object>
