--- a/src/ui/view.ui
+++ b/src/ui/view.ui
@@ -2,7 +2,21 @@
 <interface>
   <template class="NonogramsView" parent="GtkWidget">
     <child>
-      <object class="GtkDrawingArea" id="drawing_area" />
+      <object class="GtkBox">
+        <property name="orientation">vertical</property>
+        <property name="spacing">5</property>
+        <child>
+          <object class="GtkDrawingArea" id="drawing_area">
+            <property name="hexpand">true</property>
+            <property name="vexpand">true</property>
+          </object>
+        </child>
+        <child>
+          <object class="NonogramsColorPicker" id="color_picker">
+            <property name="halign">center</property>
+          </object>
+        </child>
+      </object>
     </child>
   </template>
 </interface>
