--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -11,7 +11,15 @@
       <object class="GtkBox">
         <property name="orientation">vertical</property>
         <child>
-          <object class="AdwHeaderBar" />
+          <object class="AdwHeaderBar">
+            <child type="end">
+              <object class="GtkMenuButton">
+                <property name="icon-name">open-menu</property>
+                <property name="menu-model">main_menu</property>
+                <property name="tooltip-text">Main menu</property>
+              </object>
+            </child>
+          </object>
         </child>
         <child>
           <object class="NonogramsView" id="view">
@@ -26,4 +34,12 @@
       </object>
     </property>
   </template>
+  <menu id="main_menu">
+    <section>
+      <item>
+        <attribute name="label">About</attribute>
+        <attribute name="action">win.about</attribute>
+      </item>
+    </section>
+  </menu>
 </interface>
