--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -24,13 +24,55 @@
         <child>
           <object class="AdwToastOverlay" id="toast_overlay">
             <child>
-              <object class="NonogramsView" id="view">
-                <property name="hexpand">1</property>
-                <property name="vexpand">1</property>
-                <property name="margin-top">5</property>
-                <property name="margin-bottom">5</property>
-                <property name="margin-start">5</property>
-                <property name="margin-end">5</property>
+              <object class="GtkStack" id="stack">
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="name">puzzle_selector</property>
+                    <property name="child">
+                      <object class="GtkBox">
+                        <property name="orientation">vertical</property>
+                        <property name="spacing">10</property>
+                        <property name="margin-top">10</property>
+                        <property name="margin-bottom">10</property>
+                        <property name="margin-start">10</property>
+                        <property name="margin-end">10</property>
+                        <child>
+                          <object class="GtkLabel" id="puzzle_set_title">
+                            <property name="label">Puzzles</property>
+                            <style>
+                              <class name="title-1" />
+                            </style>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkListBox" id="puzzle_list">
+                            <property name="halign">0.5</property>
+                            <property name="vexpand">0</property>
+                            <property name="selection-mode">none</property>
+                            <style>
+                              <class name="boxed-list" />
+                            </style>
+                          </object>
+                        </child>
+                      </object>
+                    </property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="name">view</property>
+                    <property name="child">
+                      <object class="NonogramsView" id="view">
+                        <property name="hexpand">1</property>
+                        <property name="vexpand">1</property>
+                        <property name="margin-top">5</property>
+                        <property name="margin-bottom">5</property>
+                        <property name="margin-start">5</property>
+                        <property name="margin-end">5</property>
+                      </object>
+                    </property>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
