--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -13,7 +13,9 @@
         <child>
           <object class="AdwHeaderBar">
             <property name="title-widget">
-              <object class="AdwWindowTitle" id="window_title" />
+              <object class="AdwWindowTitle" id="window_title">
+                <property name="title">Nonograms</property>
+              </object>
             </property>
             <child type="end">
               <object class="GtkMenuButton">
