--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -20,8 +20,56 @@
             <child type="end">
               <object class="GtkMenuButton">
                 <property name="icon-name">open-menu</property>
-                <property name="menu-model">main_menu</property>
                 <property name="tooltip-text">Main menu</property>
+                <property name="menu-model">main_menu</property>
+              </object>
+            </child>
+            <child type="end">
+              <object class="GtkMenuButton">
+                <property name="icon-name">info-symbolic</property>
+                <property name="tooltip-text">About this puzzle</property>
+                <property name="popover">
+                  <object class="GtkPopover">
+                    <child>
+                      <object class="GtkBox">
+                        <property name="orientation">vertical</property>
+                        <property name="spacing">10</property>
+                        <property name="margin-top">10</property>
+                        <property name="margin-bottom">10</property>
+                        <property name="margin-start">10</property>
+                        <property name="margin-end">10</property>
+                        <child>
+                          <object class="GtkLabel" id="info_title">
+                            <style>
+                              <class name="heading" />
+                            </style>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="info_author">
+                            <style>
+                              <class name="caption-heading" />
+                            </style>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="info_copyright">
+                            <style>
+                              <class name="caption" />
+                            </style>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="info_source">
+                            <style>
+                              <class name="caption" />
+                            </style>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                  </object>
+                </property>
               </object>
             </child>
           </object>
