--- a/src/ui/window.ui
+++ b/src/ui/window.ui
@@ -12,6 +12,12 @@
         <property name="orientation">vertical</property>
         <child>
           <object class="AdwHeaderBar">
+            <child type="start">
+              <object class="GtkButton" id="library_menu_button">
+                <property name="icon-name">library-symbolic</property>
+                <property name="tooltip-text">Library</property>
+              </object>
+            </child>
             <property name="title-widget">
               <object class="AdwWindowTitle" id="window_title">
                 <property name="title">Nonograms</property>
@@ -25,7 +31,7 @@
               </object>
             </child>
             <child type="end">
-              <object class="GtkMenuButton">
+              <object class="GtkMenuButton" id="info_menu_button">
                 <property name="icon-name">info-symbolic</property>
                 <property name="tooltip-text">About this puzzle</property>
                 <property name="popover">
@@ -78,6 +84,39 @@
           <object class="AdwToastOverlay" id="toast_overlay">
             <child>
               <object class="GtkStack" id="stack">
+                <child>
+                  <object class="GtkStackPage">
+                    <property name="name">library</property>
+                    <property name="child">
+                      <object class="GtkBox">
+                        <property name="orientation">vertical</property>
+                        <property name="spacing">10</property>
+                        <property name="margin-top">10</property>
+                        <property name="margin-bottom">10</property>
+                        <property name="margin-start">10</property>
+                        <property name="margin-end">10</property>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="label">Library</property>
+                            <style>
+                              <class name="title-1" />
+                            </style>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkListBox" id="library_list">
+                            <property name="halign">0.5</property>
+                            <property name="vexpand">0</property>
+                            <property name="selection-mode">none</property>
+                            <style>
+                              <class name="boxed-list" />
+                            </style>
+                          </object>
+                        </child>
+                      </object>
+                    </property>
+                  </object>
+                </child>
                 <child>
                   <object class="GtkStackPage">
                     <property name="name">puzzle_selector</property>
