--- a/data/ui/view.ui
+++ b/data/ui/view.ui
@@ -2,7 +2,7 @@
 <interface>
   <template class="NonogramsView" parent="GtkWidget">
     <child>
-      <object class="GtkBox">
+      <object class="GtkBox" id="box">
         <property name="orientation">vertical</property>
         <property name="spacing">5</property>
         <child>
